[gd_scene load_steps=7 format=2]

[ext_resource path="res://cayen.gd" type="Script" id=1]
[ext_resource path="res://assets/cayen-1.png" type="Texture" id=2]
[ext_resource path="res://assets/soundeffects/cayen-laugh.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 136, 232.375 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="cayen" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 100 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -66, 106.375 )
shape = SubResource( 2 )

[node name="hit" type="AudioStreamPlayer" parent="."]

[node name="attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -179.0
margin_top = -180.0
margin_right = 159.0
margin_bottom = -144.0
custom_styles/fg = SubResource( 3 )
percent_visible = false

[node name="laugh_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="laugh_timer" to="." method="_on_cry_timer_timeout"]
